Fix compilation error under recent clang update https://bugs.webkit.org/show_bug.cgi?id=167707

Reviewed by Eric Carlson.

Include TypedArrayInlines.h to fix a "missing symbol" link error when compiling under a recent clang update.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:


Canonical link: https://commits.webkit.org/184744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211530 268f45cc-cd09-0410-ab3c-d52691b4dbfc